--- a/css/main.css
+++ b/css/main.css
@@ -264,3 +264,34 @@ textarea {
   }
 }
 
+
+.whiteborder { font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif; 
+  font-size: 36px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 36px; 
+  -webkit-text-stroke: 1px black;
+   color: white;
+   text-shadow:
+       1px 1px 0 #FFF,
+     -1px -1px 0 #FFF,  
+      1px -1px 0 #FFF,
+      -1px 1px 0 #FFF,
+       1px 1px 0 #FFF;
+  } 
+
+  i.icon-green{
+    color: #1b5e20;
+}
+
+.material-icons {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.contact {
+  padding-right: 20px;
+}
+
+.cbs {
+  padding-bottom: 10px;
+}
